# TimeIntegrator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Cli/: GooHook1dCli.cpp  GooHook1dCli.h
CompositeModel/: CompositeModel.cpp  CompositeModel.h  FiniteElement.cpp  FiniteElement.h  LiElement.cpp  LiElement.h  NHElement.cpp  NHElement.h  NonlinearElement.cpp  NonlinearElement.h  StVKElement.cpp  StVKElement.h
Gui/: CompositeElementsGui.cpp  CompositeElementsGui.h  FiniteElementsGui.cpp  FiniteElementsGui.h  GooHook1dGui.cpp  GooHook1dGui.h  PhysicsHookGui.h
MMACodes/: C_Codes_Plots.nb  FE_Analysis.nb  FE_Analysis_new.nb  LinearElements.nb  LinearElements_changedC.nb  LinearElements_external_force.nb  PlotEnergy.nb  StVK.nb
PhysicalModel/: ExternalForces.cpp  ExternalForces.h  GooHook1d.cpp  GooHook1d.h  LinearElements.cpp  LinearElements.h  NeoHookean.cpp  NeoHookean.h  PhysicalModel.cpp  PhysicalModel.h  SceneObjects.h  SimParameters.h  StVK.cpp  StVK.h
SpectraAnalysis/: SpectraAnalysisLinearElements.cpp  SpectraAnalysisLinearElements.h
cmake/: FindEigen3.cmake  FindLIBIGL.cmake  FindSPECTRA.cmake
example/: CMakeLists.txt  main.cpp
include/: ExplicitEuler.h  ExponentialRosenBrockEuler.h  ImplicitEuler.h  MatrixVecExp.h
include/IntegrationScheme/: AdditiveScheme.h  BDF2.h  CompositeScheme.h  ExplicitEuler.h  ExplicitNewmark.h  ExponentialRosenBrockEuler.h  GeneralizedTrapezoid.h  ImplicitEuler.h  ImplicitMidPoint.h  Newmark.h  ProjectionScheme.h  RoungeKutta4.h  SplitScheme.h  Trapezoid.h  TrapezoidBDF2.h  VelocityVerlet.h
include/Optimization/: LineSearch.h  NewtonDescent.h
include/Utils/: GIF.cpp  GIF.h  GIF.hpp  MatrixVecExp.h
include/optimization/: LineSearch.h  NewtonDescent.h
plots/scripts/: plots.m  plots.py  plots_alphas.py  plots_frequency.py  plots_timeStep.py
src/Optimization/: LineSearch.cpp  NewtonDescent.cpp
src/Utils/: GIF.cpp
